fix:     1. [x] html         1. [x] the picture in my profile         2. [x] gallery in my profile         3. [x] about me in my-profile     2. [ ] css         1. [x] the alignment of messages in the chatroom * [x] backend

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -80,6 +80,10 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+.user-photo-bckg{
+	background-size: cover;
+	position: relative;
+}
 .btn-top-align{
 	top: 10px;
 }
@@ -104,6 +108,7 @@ $colors: (
 .actn-btn{
 	width: 76px;
 	height: 76px;
+	margin-bottom: 100px;
 }
 .notification{
   max-width: 9px;
